small edit's to gemma's cv and correct line spacing

--- a/src/assets/style/docs.scss
+++ b/src/assets/style/docs.scss
@@ -7,11 +7,15 @@
   max-width: 100%;
 
   ul li {
-    margin-bottom: .5rem;
+    margin-bottom: 0;
   }
 
   p > img {
     margin-bottom: 0;
+  }
+
+  p {
+    margin-bottom: 0.5rem;
   }
 
   @media screen and (min-width: 1000px) {
@@ -21,11 +25,11 @@
     }
   }
 
-  
+
   h1, h2, h3 {
     padding-top: 6rem;
     margin-top: -5rem;
-
+    margin-bottom: 1rem;
 
     a {
       float: left;
@@ -61,15 +65,18 @@
     &::before {
       content: " ";
       display: block;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
       border-top: 1px solid var(--border-color);
       transition: border-color .3s;
     }
   }
-  
-  h3 { opacity: .9 }
 
-  h4, h5, h6 { opacity: .8 }
+  h3 { opacity: 1 }
+
+  h4, h5, h6 {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+    opacity: 1 }
 
   h1 a, h4 a, h5 a, h6 a {
     display: none;
@@ -92,7 +99,7 @@
   display: flex;
   align-items: center;
   padding-top: 1rem;
-  
+
   &:not(:hover) {
     color: var(--primary-color-dark);
   }
