--- a/src/assets/style/plugins.scss
+++ b/src/assets/style/plugins.scss
@@ -97,7 +97,7 @@
   &__description {
     opacity: .8;
     font-size: .85rem;
-    line-height: 1.3;
+    line-height: 1;
     display: inline-block;
   }
 
